fixed search bar spacing across all devices

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -17,7 +17,8 @@ body{
     color: white;
 }
 .searchBarContainer {
-    margin-top: 4%;
+    margin-top: 6.5%;
+    margin-bottom: 4%;
     text-align: center;
     vertical-align: middle;
 }
@@ -327,6 +328,9 @@ table.table-bordered > tbody > tr > th{
 @media only screen
   and (max-width: 1366px)
   and (orientation: landscape) {
+      .empHeaderContainer {
+          margin-bottom: 5%;
+      }
       .menuContainer {
         width: 20%;
       }
@@ -365,8 +369,6 @@ table.table-bordered > tbody > tr > th{
   and (max-width: 768px)
   and (orientation: portrait) {
     body {
-        /* width: 768px; */
-        /* height: 1024px; */
         background-position: center center;
         background-attachment: fixed;
     }
@@ -419,10 +421,6 @@ table.table-bordered > tbody > tr > th{
   and (max-width: 1024px)
   and (orientation: landscape) {
     body {
-        /* background-size: 113%; */
-
-        /* height: 768px; */
-        /* width: 1024px; */
         background-position: center center;
         background-attachment: fixed;
     }
